.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

18.2.0  2018-02-05

New Features:

  * util-core: Added implicit conversion for percentage specified as "x.percent"
    to a fractional Double in `c.t.conversions.percent`. ``PHAB_ID=D128792``

  * util-tunable: Add deserializer for `c.t.u.StorageUnit` to JsonTunableMapper
    ``PHAB_ID=D132368``

Runtime Behavior Changes:

  * util-app: When `c.t.a.App.exitOnError` is called, it now gives `close`
    an opportunity to clean up resources before exiting with an error.
    ``PHAB_ID=D129437``

18.1.0  2018-01-17

New Features:

  * util-security: Added `c.t.util.security.X509CrlFile` for reading
    Certificate Revocation List PEM formatted `X509CRL` files.
    ``PHAB_ID=D127700``

17.12.0  2017-12-08

API Changes:

  * util-collection: `c.t.util.SetMaker` has been removed.
    Direct usage of Guava is recommended if needed. ``PHAB_ID=D116852``

17.11.0  2017-11-15

Dependencies:

  * Guava has been removed as dependency from all modules except the
    'util-cache-guava' module. ``PHAB_ID=D117039``

New Features:

  * util-security: Added `c.t.util.security.PrivateKeyFile` for reading PKCS#8
    PEM formatted `PrivateKey` files. ``PHAB_ID=D105266``

Bug Fixes:

  * util-core: `c.t.io.BufByteWriter.fixed(size).owned()` will only represent bytes
    explicitly written instead of the full size of the backing array, `size`.
    ``PHAB_ID=D112938``

API Changes:

  * util-cache: The Guava dependency and its associated implementations have been
    moved to a new module, 'util-cache-guava'. ``PHAB_ID=D117039``

  * util-cache: `c.t.cache.EvictingCache.lazily` now takes a `FutureCache`
    instead of an implementation specific cache. ``PHAB_ID=D117039``

17.10.0  2017-10-26

Release Version Changes: